# docs/swagger.yaml
@@ -947,6 +947,82 @@ definitions:
           $ref: '#/definitions/schema.SlideItem'
         type: array
     type: object
+  schema.InvitationCodeSettingsRequest:
+    properties:
+      cost:
+        description: Invitation code cost (only for points, currency) | 邀请码费用（限积分、货币模式）
+        example: 100
+        maximum: 10000
+        minimum: 0
+        type: integer
+      invitee_reward:
+        description: Invitee reward points | 被邀请人奖励积分
+        example: 20
+        maximum: 10000
+        minimum: 0
+        type: integer
+      is_enable:
+        description: Whether to enable invitation code | 是否启用邀请码
+        example: true
+        type: boolean
+      max_generation_count:
+        description: Maximum number of invitation codes a user can generate | 用户最大可生成邀请码数量
+        example: 10
+        maximum: 1000
+        minimum: 1
+        type: integer
+      mode:
+        description: 'Invitation code mode: direct, points, currency | 邀请码模式：direct、points、currency'
+        enum:
+        - direct
+        - points
+        - currency
+        example: direct
+        type: string
+      referral_bonus:
+        description: Referral bonus points | 邀请人奖励积分
+        example: 50
+        maximum: 10000
+        minimum: 0
+        type: integer
+      reward_is_enable:
+        description: Whether to enable invitation code reward | 是否启用邀请码奖励
+        example: true
+        type: boolean
+    required:
+    - mode
+    type: object
+  schema.InvitationCodeSettingsResponse:
+    properties:
+      cost:
+        description: Invitation code cost (only for points, currency) | 邀请码费用（限积分、货币模式）
+        example: 100
+        type: integer
+      invitee_reward:
+        description: Invitee reward points | 被邀请人奖励积分
+        example: 20
+        type: integer
+      is_enable:
+        description: Whether to enable invitation code | 是否启用邀请码
+        example: true
+        type: boolean
+      max_generation_count:
+        description: Maximum number of invitation codes a user can generate | 用户最大可生成邀请码数量
+        example: 10
+        type: integer
+      mode:
+        description: 'Invitation code mode: direct, points, currency | 邀请码模式：direct、points、currency'
+        example: direct
+        type: string
+      referral_bonus:
+        description: Referral bonus points | 邀请人奖励积分
+        example: 50
+        type: integer
+      reward_is_enable:
+        description: Whether to enable invitation code reward | 是否启用邀请码奖励
+        example: true
+        type: boolean
+    type: object
   schema.LinkItem:
     properties:
       description:
@@ -2010,6 +2086,8 @@ definitions:
         $ref: '#/definitions/schema.CommentSettingsResponse'
       home:
         $ref: '#/definitions/schema.HomeSettingsResponse'
+      invitation_code:
+        $ref: '#/definitions/schema.InvitationCodeSettingsResponse'
       routine:
         $ref: '#/definitions/schema.RoutineSettingsResponse'
       safe:
@@ -8213,6 +8291,64 @@ paths:
       security:
       - Bearer: []
       summary: Update home settings | 更新首页设置
+      tags:
+      - '[Super Admin]System Settings | [超级管理员]系统设置'
+  /super/manage/settings/invitation-code:
+    get:
+      consumes:
+      - application/json
+      description: Get invitation code feature related configuration including mode,
+        cost, reward, etc. | 获取邀请码功能相关配置，包括模式、费用、奖励等
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Success | 获取成功
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Data'
+            - properties:
+                data:
+                  $ref: '#/definitions/schema.InvitationCodeSettingsResponse'
+              type: object
+        "500":
+          description: Server error | 服务器错误
+          schema:
+            $ref: '#/definitions/response.Data'
+      security:
+      - Bearer: []
+      summary: Get invitation code settings | 获取邀请码设置
+      tags:
+      - '[Super Admin]System Settings | [超级管理员]系统设置'
+    post:
+      consumes:
+      - application/json
+      description: Update invitation code feature related configuration | 更新邀请码功能相关配置
+      parameters:
+      - description: Invitation code settings information | 邀请码设置信息
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/schema.InvitationCodeSettingsRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Updated successfully | 更新成功
+          schema:
+            $ref: '#/definitions/response.Data'
+        "400":
+          description: Invalid request parameters | 请求参数错误
+          schema:
+            $ref: '#/definitions/response.Data'
+        "500":
+          description: Server error | 服务器错误
+          schema:
+            $ref: '#/definitions/response.Data'
+      security:
+      - Bearer: []
+      summary: Update invitation code settings | 更新邀请码设置
       tags:
       - '[Super Admin]System Settings | [超级管理员]系统设置'
   /super/manage/settings/oauth:
